--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=postgresql://postgres:2837@localhost:5432/
+PYTHONPATH=./src
+
+DATABASE_URL=postgresql://postgres:2837@localhost:5432/challenge
